syntax = "proto3";

package yandex.cloud.audit.mdb.mysql;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "yandex/cloud/audit/common.proto";
import "yandex/cloud/mdb/mysql/v1/cluster.proto";
import "yandex/cloud/mdb/mysql/v1/maintenance.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/audit/mdb/mysql;mysql";
option java_package = "yandex.cloud.api.audit.mdb.mysql";
option java_outer_classname = "MysqlClusterEvents";

message ClusterCommonEventDetails {
  // ID of the MySQL cluster.
  // This ID is assigned by Managed Service for MySQL at creation time.
  string cluster_id = 1 [(required) = true, (length) = "<=50"];
  // Name of the MySQL cluster.
  string cluster_name = 2;
  // Deployment environment of the MySQL cluster.
  string environment = 3;
  // Description of monitoring systems relevant to the MySQL cluster.
  repeated yandex.cloud.mdb.mysql.v1.Monitoring monitoring = 4;
  // Configuration of the MySQL cluster.
  yandex.cloud.mdb.mysql.v1.ClusterConfig config = 5;
  // ID of the network that the cluster belongs to.
  string network_id = 6 [(length) = "<=50"];
  // Aggregated cluster health.
  yandex.cloud.mdb.mysql.v1.Cluster.Health health = 7;
  // Current state of the cluster.
  yandex.cloud.mdb.mysql.v1.Cluster.Status status = 8;
  // Maintenance window for the cluster.
  yandex.cloud.mdb.mysql.v1.MaintenanceWindow maintenance_window = 9;
  // Planned maintenance operation to be started for the cluster within the nearest [maintenance_window].
  yandex.cloud.mdb.mysql.v1.MaintenanceOperation planned_operation = 10;
  // User security groups
  repeated string security_group_ids = 11;
  // Deletion Protection inhibits deletion of the cluster
  bool deletion_protection = 12;
  // Host groups hosting VMs of the cluster.
  repeated string host_group_ids = 13;
}

message ClusterWithHostsEventDetails {
  // ID of the MySQL cluster.
  // This ID is assigned by Managed Service for MySQL at creation time.
  string cluster_id = 1 [(required) = true, (length) = "<=50"];
  // Name of the MySQL cluster.
  string cluster_name = 2;
  // Deployment environment of the MySQL cluster.
  string environment = 3;
  // Description of monitoring systems relevant to the MySQL cluster.
  repeated yandex.cloud.mdb.mysql.v1.Monitoring monitoring = 4;
  // Configuration of the MySQL cluster.
  yandex.cloud.mdb.mysql.v1.ClusterConfig config = 5;
  // ID of the network that the cluster belongs to.
  string network_id = 6 [(length) = "<=50"];
  // Aggregated cluster health.
  yandex.cloud.mdb.mysql.v1.Cluster.Health health = 7;
  // Current state of the cluster.
  yandex.cloud.mdb.mysql.v1.Cluster.Status status = 8;
  // Maintenance window for the cluster.
  yandex.cloud.mdb.mysql.v1.MaintenanceWindow maintenance_window = 9;
  // Planned maintenance operation to be started for the cluster within the nearest [maintenance_window].
  yandex.cloud.mdb.mysql.v1.MaintenanceOperation planned_operation = 10;
  // User security groups
  repeated string security_group_ids = 11;
  // Deletion Protection inhibits deletion of the cluster
  bool deletion_protection = 12;

  repeated string host_names = 13 [(required) = true];
  // Host groups hosting VMs of the cluster.
  repeated string host_group_ids = 14;
}

message CreateCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message UpdateCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message DeleteCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message StartCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message StopCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message MoveCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    // ID of the MySQL cluster.
    // This ID is assigned by Managed Service for MySQL at creation time.
    string cluster_id = 1 [(required) = true, (length) = "<=50"];
    // Name of the MySQL cluster.
    string cluster_name = 2;
    // Deployment environment of the MySQL cluster.
    string environment = 3;
    // Description of monitoring systems relevant to the MySQL cluster.
    repeated yandex.cloud.mdb.mysql.v1.Monitoring monitoring = 4;
    // Configuration of the MySQL cluster.
    yandex.cloud.mdb.mysql.v1.ClusterConfig config = 5;
    // ID of the network that the cluster belongs to.
    string network_id = 6 [(length) = "<=50"];
    // Aggregated cluster health.
    yandex.cloud.mdb.mysql.v1.Cluster.Health health = 7;
    // Current state of the cluster.
    yandex.cloud.mdb.mysql.v1.Cluster.Status status = 8;
    // Maintenance window for the cluster.
    yandex.cloud.mdb.mysql.v1.MaintenanceWindow maintenance_window = 9;
    // Planned maintenance operation to be started for the cluster within the nearest [maintenance_window].
    yandex.cloud.mdb.mysql.v1.MaintenanceOperation planned_operation = 10;
    // User security groups
    repeated string security_group_ids = 11;
    // Deletion Protection inhibits deletion of the cluster
    bool deletion_protection = 12;
    // ID of the source folder.
    string source_folder_id = 13 [(required) = true, (length) = "<=50"];
    // ID of the destination folder.
    string destination_folder_id = 14 [(required) = true, (length) = "<=50"];
  }
}

message BackupCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
  
  message Response {
    string operation_id = 1 [(required) = true];
    string backup_id = 2 [(required) = true];
  }
}

message RestoreCluster {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    string cluster_id = 1 [(required) = true];
    string backup_id = 2 [(required) = true];
  }
}

message StartClusterFailover {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message RescheduleMaintenance {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterCommonEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message AddClusterHosts {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterWithHostsEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message DeleteClusterHosts {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterWithHostsEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}

message UpdateClusterHosts {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  ClusterWithHostsEventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;
}
